--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -11,9 +11,13 @@ permissions:
   pull-requests: write
   pages: write
   id-token: write
+  actions: write
 
 jobs:
   evaluate:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
     
@@ -161,16 +165,17 @@ jobs:
             git push origin main
           fi
       
-      - name: Trigger Pages deployment
-        uses: actions/github-script@v7
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          script: |
-            await github.rest.actions.createWorkflowDispatch({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              workflow_id: 'deploy-pages.yml',
-              ref: 'main'
-            });
+          path: 'docs'
+      
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
       
       - name: Comment on PR with results
         uses: actions/github-script@v7
